# DNgine

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  analysis_results.md  build_linux.sh  build_macos.sh  build_windows.bat  build_windows.sh  dngine.iss  dngine.spec  implementation_plan.md  micro-toolkit.iss  micro-toolkit.spec  neXt.md  pyproject.toml  requirements.txt  standardization_audit.md  tracker.md
dngine/: __init__.py  __main__.py  _manifest_hash.py  app.py  builtin_plugin_manifest.json  first_party_catalog.json  first_party_signers.json  main.py
dngine/core/: app_config.py  autostart.py  backup_manager.py  builtin_manifest.py  builtin_tool_commands.py  cli.py  clip_edit_dialog.py  clip_monitor.py  clipboard_quick_panel.py  clipboard_store.py  clipboard_transforms.py  confirm_dialog.py  context_menus.py  document_converter.py  elevated_broker.py  elevation.py  first_party_packages.py  fp_plugins.py  hotkey_helper.py  i18n.py  media_utils.py  page_style.py  plugin_dependencies.py  plugin_manager.py  plugin_packages.py  plugin_signing.py  plugin_state.py  runtime_launch.py  screen_picker.py  services.py  tray.py  (+5 more)
docs/: README.md
micro_toolkit/: __init__.py  __main__.py  app.py  builtin_plugin_manifest.json  main.py
tests/: test_entrypoint.py  test_media_plugins.py  test_sdk_contracts.py  test_signed_packages.py  test_task_callbacks.py  test_web_scraper.py
tools/: audit_global_ui.py  build_first_party_packages.py  build_fp_plugins.py  create_sdk_plugin.py  export_used_icons.py  fp_plugins_private_key.pem  generate_builtin_plugin_manifest.py
(+297 files in other folders)
